@@ -1,6 +1,6 @@
 /* mpz_tdiv_q -- divide two integers and produce a quotient.
 
-Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005 Free Software Foundation,
+Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005, 2010 Free Software Foundation,
 Inc.
 
 This file is part of the GNU MP Library.
@@ -27,7 +27,7 @@ mpz_tdiv_q (mpz_ptr quot, mpz_srcptr num, mpz_srcptr den)
 {
   mp_size_t ql;
   mp_size_t ns, ds, nl, dl;
-  mp_ptr np, dp, qp, rp;
+  mp_ptr np, dp, qp;
   TMP_DECL;
 
   ns = SIZ (num);
@@ -49,13 +49,8 @@ mpz_tdiv_q (mpz_ptr quot, mpz_srcptr num, mpz_srcptr den)
 
   TMP_MARK;
   qp = PTR (quot);
-  rp = TMP_ALLOC_LIMBS (dl);
   np = PTR (num);
   dp = PTR (den);
-
-  /* FIXME: We should think about how to handle the temporary allocation.
-     Perhaps mpn_tdiv_qr should handle it, since it anyway often needs to
-     allocate temp space.  */
 
   /* Copy denominator to temporary space if it overlaps with the quotient.  */
   if (dp == qp)
@@ -69,12 +64,17 @@ mpz_tdiv_q (mpz_ptr quot, mpz_srcptr num, mpz_srcptr den)
   if (np == qp)
     {
       mp_ptr tp;
-      tp = TMP_ALLOC_LIMBS (nl);
+      tp = TMP_ALLOC_LIMBS (nl + 1);
       MPN_COPY (tp, np, nl);
-      np = tp;
+      /* Overlap dividend and scratch.  */
+      mpn_div_q (qp, tp, nl, dp, dl, tp);
     }
-
-  mpn_tdiv_qr (qp, rp, 0L, np, nl, dp, dl);
+  else
+    {
+      mp_ptr tp;
+      tp = TMP_ALLOC_LIMBS (nl + 1);
+      mpn_div_q (qp, np, nl, dp, dl, tp);
+    }
 
   ql -=  qp[ql - 1] == 0;
 
